--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 <body>
   <main class="font-poppins">
-    <header class="px-80 py-48">
+    <header class="px-80 py-48 bg-hero">
       <nav class="flex justify-between">
         <img class="w-200 h-31" src="./images/logo.svg" alt="icon">
-        <button class="w-200 h-48 bg-[#F2F2F2] rounded-full text-darkblue">Try It Free</button>
+        <button class="w-200 h-48 bg-white rounded-full text-darkblue">Try It Free</button>
       </nav>
       <div class="hero flex justify-between gap-54 mt-71">
         <div class="text flex flex-col justify-center items-start gap-32">
@@ -28,49 +28,50 @@
         <img class="max-w-[680px]" src="./images/illustration-mockups.svg" alt="hero img">
       </div>
     </header>
-    <section class="flex flex-col justify-center gap-40 items-center mt-160">
+    <section class="flex flex-col justify-center gap-40 items-center mt-160 ">
 
-      <div class=" max-w-screen-card flex gap-168 rounded-16 shadow-boxxshadow">
-        <div class="flex flex-col justify-center items-start gap-16 max-w-488">
+      <div class="flex gap-168 rounded-16 shadow-xl w-10/12">
+        <div class="flex flex-col justify-center items-start gap-16 px-20 ">
           <h2 class="text-heading2 text-darkblue">Grow Together</h2>
           <p>
             Generate meaningful discussions with your audience and build a strong, loyal community. 
             Think of the insightful conversations you miss out on with a feedback form.
           </p>
         </div>
-        <img class="max-w-440" src="./images/illustration-grow-together.svg" alt="grow">
+        <img class="w-440 h-440 object-contain" src="./images/illustration-grow-together.svg" alt="grow">
       </div>
 
-      <div class="max-w-screen-card flex gap-168 rounded-r-16 shadow-boxxshadow">
-        <div class="flex flex-col justify-center items-start gap-16 max-w-488">
+      <div class="flex gap-168 rounded-16  shadow-xl w-10/12">
+        <img class="w-440 h-440 object-contain" src="./images/illustration-flowing-conversation.svg" alt="flowing conv">
+        <div class="flex flex-col justify-center items-start gap-16 px-20 ">
           <h2 class="text-heading2 text-darkblue">Flowing Conversations</h2>
           <p>
             You wouldn't paginate a conversation in real life, so why do it online? Our threads 
             have just-in-time loading for a more natural flow.
           </p>
         </div>
-        <img class="max-w-440" src="./images/illustration-flowing-conversation.svg" alt="flowing conv">
+       
 
       </div>
 
-      <div class="max-w-screen-card flex gap-168 rounded-16 shadow-boxxshadow">
-        <div class="flex flex-col justify-center items-start gap-16 max-w-488">
+      <div class="flex gap-168 rounded-16 shadow-xl w-10/12">
+        <div class="flex flex-col justify-center items-start gap-16 px-20 ">
           <h2 class="text-heading2 text-darkblue">Your Users</h2>
           <p>  
             It takes no time at all to integrate Huddle with your app's authentication solution. 
             This means, once signed in to your app, your users can start chatting immediately.
           </p>
         </div>
-        <img  class="max-w-440" src="./images/illustration-your-users.svg" alt="your users" >
+        <img  class="w-440 h-440 object-contain" src="./images/illustration-your-users.svg" alt="your users" >
       </div>
       
     </section>
-    <footer class="">
+    <footer class=" w-full bg-darkblue  text-White mt-160">
       <div class="bg-White flex flex-col items-center  relative z-50 py-5 top-7 ">
         <span class="text-heading3 text-darkblue">Ready To Build Your Community?</span>
         <button class="w-280 h-54 rounded-full bg-btncl text-White">Get Started For Free</button>
       </div>
-      <div class="bg-darkblue  text-White flex justify-between px-20 py-20">
+      <div class=" flex justify-between px-20 py-20">
         <div class="flex flex-col gap-24">
           <!-- <img src="./images/logo.svg" alt="footer log"> -->
           <div class="loc flex gap-16">
