--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <title>Frontend Mentor | Huddle landing page with alternating feature blocks</title>
-  <link rel="stylesheet" href="./src/css/style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <main class="font-poppins">
-    <header class="px-80 pt-48 bg-hero lg:bg-desktophbg bg-mobilehbg">
+    <header class="px-80 pt-48 pb-92 bg-hero lg:bg-desktophbg bg-mobilehbg">
       <nav class="flex justify-between items-center">
         <img class="w-200 h-31" src="./images/logo.svg" alt="log svg">
         <button class="rounded-24 bg-White text-darkblue text-btn w-200 h-48">Try it Free</button>
       </nav>
-      <div class="hero flex lg:flex-row flex-col gap-54 mt-71 pb-92">
+      <div class="hero flex lg:flex-row flex-col gap-54 pt-71 ">
         <div class="txt flex flex-col justify-center lg:text-start text-center gap-32">
           <span class="lg:text-heading text-heading2 text-darkblue">Build The Community Your Fans Will Love</span>
           <p class="text-parag font-OpenSans">Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion. </p>
