--- a/index.html
+++ b/index.html
@@ -23,41 +23,41 @@
           <p class="text-parag font-OpenSans">Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion. </p>
           <span class="w-280 h-56 rounded-full text-white flex items-center justify-center bg-btncl">Get Started For Free</span>          
         </div>
-        <img src="./images/illustration-mockups.svg" alt="mockup" class="lg:w-680 w-full lg:h-482 h-full object-cover">
+        <img src="./images/illustration-mockups.svg" alt="mockup" class="lg:w-680 w-full lg:h-482 object-cover">
       </div>
     </header>
     <section class="flex flex-col justify-center gap-40 items-center my-160">
-      <div class="flex flex-col-reverse lg:flex-row lg:gap-168 gap-40 rounded-16 shadow-xl lg:w-1232 w-full lg:py-4 py-6">
+      <div class="flex flex-col-reverse lg:flex-row items-center justify-around  gap-40 rounded-16 shadow  drop-shadow-boxxshadow lg:w-1232 lg:h-440 mx-auto ">
         <div class="flex flex-col justify-center lg:text-start text-center gap-16 px-20 ">
           <h2 class="text-heading2 text-darkblue">Grow Together</h2>
-          <p  class="font-OpenSans text-lightblue">
+          <p  class="font-OpenSans text-lightblue lg:max-w-488 w-full">
             Generate meaningful discussions with your audience and build a strong, loyal community. 
             Think of the insightful conversations you miss out on with a feedback form.
           </p>
         </div>
-        <img class="md:w-440 md:h-440 sm:w-256 sm:h-256  object-contain" src="./images/illustration-grow-together.svg" alt="grow">
+        <img class="md:w-440 md:h-440 sm:w-256 sm:h-256 lg:pr-16 pr-0 mx-auto object-contain" src="./images/illustration-grow-together.svg" alt="grow">
       </div>
 
-      <div class="flex lg:flex-row flex-col lg:gap-168 gap-40 rounded-16  shadow-2xl lg:w-1232 w-full lg:py-4 py-6">
-        <img class="lg:w-440 lg:h-440 sm:w-256 sm:h-256 object-contain" src="./images/illustration-flowing-conversation.svg" alt="flowing conv">
+      <div class="flex lg:flex-row flex-col items-center justify-around  gap-40 rounded-16 shadow  drop-shadow-boxxshadow lg:w-1232 lg:h-440 mx-auto">
+        <img class="md:w-440 md:h-440 sm:w-256 sm:h-256 lg:pl-16pr-16 pl-0 mx-auto object-contain" src="./images/illustration-flowing-conversation.svg" alt="flowing conv">
         <div class="flex flex-col justify-center lg:text-start text-center gap-16 px-20 ">
           <h2 class="text-heading2 text-darkblue">Flowing Conversations</h2>
-          <p  class="font-OpenSans text-lightblue">
+          <p  class="font-OpenSans text-lightblue lg:max-w-488 w-full">
             You wouldn't paginate a conversation in real life, so why do it online? Our threads 
             have just-in-time loading for a more natural flow.
           </p>
         </div>
       </div>
 
-      <div class="flex flex-col-reverse lg:flex-row  lg:gap-168 gap-8 rounded-16 shadow-xl lg:w-1232 w-full lg:py-4 py-6">
+      <div class="flex flex-col-reverse lg:flex-row items-center justify-around  gap-40 rounded-16 shadow  drop-shadow-boxxshadow lg:w-1232 lg:h-440 mx-auto">
         <div class="flex flex-col justify-center lg:text-start text-center gap-16 px-20 ">
           <h2 class="text-heading2 text-darkblue">Your Users</h2>
-          <p class="font-OpenSans text-lightblue">  
+          <p class="font-OpenSans text-lightblue lg:max-w-488 w-full">  
             It takes no time at all to integrate Huddle with your app's authentication solution. 
             This means, once signed in to your app, your users can start chatting immediately.
           </p>
         </div>
-        <img  class="lg:w-440 lg:h-440 sm:w-256 sm:h-256 object-contain" src="./images/illustration-your-users.svg" alt="your users" >
+        <img  class="md:w-440 md:h-440 sm:w-256 sm:h-256 lg:pr-16 pr-0 mx-auto object-contain" src="./images/illustration-your-users.svg" alt="your users" >
       </div>
       
     </section>
